--- a/src/main/webapp/reports/elhaghiye.jrxml
+++ b/src/main/webapp/reports/elhaghiye.jrxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="elhaghiye" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="74d46278-5319-4901-8f6c-14432817a6f9">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.4641000000000006"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="98"/>
 	<style name="style1" hAlign="Center" vAlign="Middle" fontName="B Nazanin" fontSize="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="net/sf/jasperreports/fonts/farsi/BNazanin.ttf" pdfEncoding="Identity-H"/>
 	<parameter name="maliat" class="java.lang.String"/>
+	<parameter name="realPath" class="java.lang.String"/>
+	<parameter name="noeElhaghiye" class="java.lang.String"/>
 	<field name="elhaghiye" class="ir.parsianinsurance.he.domain.model.Elhaghiye"/>
 	<field name="elhaghiye.bimename.pishnahadeFaal.bimeGozar.shakhs" class="ir.parsianinsurance.he.domain.model.Shakhs"/>
 	<field name="bimegozarShakhsHaghighi" class="ir.parsianinsurance.he.domain.model.ShakhseHaghighi"/>
@@ -22,7 +24,7 @@
 			</staticText>
 			<image>
 				<reportElement x="522" y="4" width="30" height="40" uuid="4f82ff4b-0b46-4e3b-96fc-f537dc936d58"/>
-				<imageExpression><![CDATA["D:\\parsian_he\\src\\main\\webapp\\reports\\img\\f3.jpg"]]></imageExpression>
+				<imageExpression><![CDATA[$P{realPath} + "img\\f3.jpg"]]></imageExpression>
 			</image>
 			<line>
 				<reportElement x="480" y="45" width="72" height="1" uuid="134b95d4-a893-4417-9f5a-648037cd68bd"/>
@@ -147,8 +149,11 @@
 				<textFieldExpression><![CDATA[$F{elhaghiye}.getShomareElhaghiye()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="395" y="38" width="79" height="20" uuid="b31277e6-9e7b-47b1-8da8-6fe2a0d360ca"/>
-				<textFieldExpression><![CDATA[$F{elhaghiye}.getNoe_elhaghie()]]></textFieldExpression>
+				<reportElement style="style1" x="379" y="38" width="95" height="20" uuid="b31277e6-9e7b-47b1-8da8-6fe2a0d360ca"/>
+				<textElement>
+					<font fontName="B Nazanin" size="12" pdfEncoding="Identity-H" isPdfEmbedded="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{noeElhaghiye}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="style1" x="215" y="38" width="107" height="20" uuid="c0447914-c99e-434b-b279-242922384b70"/>
