--- a/src/main/webapp/reports/chapkhesarat.jrxml
+++ b/src/main/webapp/reports/chapkhesarat.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="chapkhesarat" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="6e320411-121b-41c5-99c0-60bf20ca1bbc">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="161"/>
-	<property name="ireport.y" value="547"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="198"/>
 	<style name="header" hAlign="Center" vAlign="Middle" fontName="B Nazanin" fontSize="18" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="net/sf/jasperreports/fonts/farsi/BNazanin.ttf" pdfEncoding="Identity-H"/>
 	<style name="style1" fontName="B Nazanin" fontSize="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="net/sf/jasperreports/fonts/farsi/BNazanin.ttf" pdfEncoding="Identity-H"/>
 	<parameter name="realPath" class="java.lang.String"/>
@@ -169,7 +169,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="11"/>
 				</textElement>
-				<text><![CDATA[نوع خسارت]]></text>
+				<text><![CDATA[نوع خسارت پرداختی]]></text>
 			</staticText>
 			<staticText>
 				<reportElement style="style1" mode="Opaque" x="331" y="6" width="92" height="21" backcolor="#FCDD5D" uuid="9a2c0136-5c62-4c71-a6f9-77a1947ae1e0"/>
