--- a/src/main/webapp/reports/chapkhesarat_mavared.jrxml
+++ b/src/main/webapp/reports/chapkhesarat_mavared.jrxml
@@ -5,7 +5,7 @@
 	<property name="ireport.y" value="0"/>
 	<property name="ireport.x" value="0"/>
 	<style name="style1" fontName="B Nazanin" fontSize="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="net/sf/jasperreports/fonts/farsi/BNazanin.ttf" pdfEncoding="Identity-H"/>
-	<field name="noeKhesaratFarsi" class="java.lang.String"/>
+	<field name="noeHadeseFarsi" class="java.lang.String"/>
 	<field name="vaziatFarsi" class="java.lang.String"/>
 	<field name="mablagh_khesarate_elamshode" class="java.lang.Long"/>
 	<field name="mablagh_khesarate_taeedshode" class="java.lang.Long"/>
@@ -17,7 +17,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="B Nazanin" size="12" pdfEncoding="Identity-H"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{noeKhesaratFarsi}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{noeHadeseFarsi}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="style1" x="311" y="0" width="101" height="21" uuid="02b3fbb5-1c60-40d3-a0e4-414da57968af"/>
