chape_hagh_bime

--- a/src/main/webapp/reports/aghsat.jrxml
+++ b/src/main/webapp/reports/aghsat.jrxml
@@ -93,7 +93,7 @@
 				<textElement>
 					<font size="11" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{bimename.pishnahadeFaal}.getShomare_pishnahad()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{bimename}.getShomare()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement style="style1" x="12" y="8" width="105" height="14" uuid="7eaaa270-0ea2-412f-9199-82bb87768c44"/>
